--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#what-we-do">What we do</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#next-event">Upcoming events</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#follow-us">Follow us</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#board">Board</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact-us">Contact us</a></li>
                     </ul>
                 </div>
             </div>
@@ -60,7 +62,9 @@
                     </div>
                 </div>
             </div>
+        </section>
         <!-- What we do-->
+        <section class="page-section" id="what-we-do">
             <div class="container">
                 <h2 class="text-center mt-0">What we do</h2>
                 <hr class="divider my-4" />
@@ -97,7 +101,7 @@
             </div>
         </section>
         <!-- Next event-->
-        <section class="page-section" id="Upcoming events">
+        <section class="page-section bg-dark text-white" id="next-event">
              <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
@@ -106,44 +110,108 @@
                         <!--<p class="text-white-50 mb-4">CBioVikings</p> -->
                         <!--No upcoming events. Please <a class="page-scroll" style='color: #F75D45' href="#followus">follow us</a> to stay updated.-->
                         <img src="assets/img/events/NCBTalks_SeqMotif.jpg" style="width: 100%; margin-top: 25px">
-                        <a href="http://bit.ly/2OP2Pad" target="_blank" class="btn btn-primary btn-md">Register now</a>
+                        <a href="http://bit.ly/2OP2Pad" target="_blank" class="btn btn-light btn-md">Register now!</a>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Call to action-->
-        <section class="page-section bg-dark text-white">
+        <!-- Socials-->
+        <section class="page-section bg-primary" id="follow-us">
+            <div class="container">
+                <h2 class="text-center mt-0">Follow us!</h2>
+                <hr class="divider my-4" />
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <a href="https://twitter.com/CBioVikings"><i class="fas fa-4x fa-twitter text-white mb-4"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <a href="https://www.instagram.com/cbiovikings/"><i class="fas fa-4x fa-instagram text-white mb-4"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="container text-center">
-                <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
+                <a class="twitter-timeline" href="https://twitter.com/CBioVikings?ref_src=twsrc%5Etfw">Tweets by CBioVikings</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </section>
-        <!-- Contact-->
-        <section class="page-section" id="contact">
+        <section id="committee">
             <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
-                        <h2 class="mt-0">Let's Get In Touch!</h2>
-                        <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2 text-center">
+                        <h2 class="section-heading">Committee</h2>
+                        <hr>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+1 (555) 123-4567</div>
+                    <div class="col-lg-2 text-center">
+                        <h4>Cas<br>Blaauw</h4>
+                        <p>President</p>
                     </div>
-                    <div class="col-lg-4 mr-auto text-center">
-                        <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-                        <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+                    <div class="col-lg-2 text-center">
+                        <h4>Petar<br>Todorov</h4>
+                        <p>Vice-President & Secretary</p>
                     </div>
+                    <div class="col-lg-2 text-center">
+                        <h4>Dimitrii<br>Borisevich</h4>
+                        <p>Treasurer</p>
+                    </div>
+                    <div class="col-lg-2 text-center">
+                        <h4>Leonor<br>Rib</h4>
+                        <p>Core Member</p>
+                    </div>
+                    <div class="col-lg-2 text-center">
+                        <h4>Mikaela<br>Koutrouli</h4>
+                        <p>Core Member</p>
+                    </div>
+                    <div class="col-lg-2 text-center">
+                        <h4>Marek<br>Prachař</h4>
+                        <p>Core Member</p>
+                    </div>
+                </div><br>
+                <div class="row">
+                    <div class="col-lg-2 col-lg-offset-2 text-center">
+                        <h4>Nazeefa<br>Fatima</h4>
+                        <p>Founder & Advisor</p>
+                    </div>
+                    <div class="col-lg-2 text-center">
+                        <h4>Roza<br>Berhanu Lemma</h4>
+                        <p>Co-founder & Core Member </p>
+                    </div>
+                    <div class="col-lg-2 text-center">
+                        <h4>Margret<br>Veltman</h4>
+                        <p>Co-founder</p>
+                    </div>
+                    <div class="col-lg-2 text-center">
+                        <h4>Marieke<br>Kuijjer</h4>
+                        <p>Advisor</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Contact-->
+        <section class="page-section bg-dark text-white" id="contact">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="mt-0">Contact us</h2>
+                        <hr class="divider my-4" />
+                        <p class="text-muted mb-5">Looking to join, collaborate or advertise? Contact us and we will get back to you as soon as possible!</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <a href="mailto:info@cbiovikings.org><i class="fas fa-envelope fa-3x mb-3 text-white"></i></a>
+                    <!-- Make sure to change the email address in the anchor text and the link target below and in the icon!-->
+                    <a class="d-block" href="mailto:info@cbiovikings.org">info@cbiovikings.org</a>
                 </div>
             </div>
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - Start Bootstrap</div></div>
+            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - CBioVikings
+                                                                            Theme <a href="https://startbootstrap.com/theme/creative"'Creative'</a> from <a href="https://startbootstrap.com/">Start Bootstrap</a></div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
