--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">CBioVikings</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#what-we-do">What we do</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#next-event">Upcoming events</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#follow-us">Follow us</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#board">Board</a></li>
@@ -56,9 +55,9 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">About</h2>
+                        <h2 class="text-white mt-0">Who are we?</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">CBioVikings, short for Computational Biology Vikings, is a non-profit organization for students in the field of bioinformatics and computational biology. Our goals are to promote events that enable networking between students and established researchers in the field, and to help train the next generation of computational biologists in Denmark. The founding board of CBioVikings was established in early 2015 by ten PhD students with diverse backgrounds in computer science, computational biology, bioinformatics and biology from DTU and UCPH. In May 2015 CBioVikings was accepted as the official International Society for Computational Biology (ISCB) Regional Student Group (RSG) in Denmark.</p>
+                        <p class="text-white-50 mb-4">CBioVikings, short for Computational Biology Vikings, is a non-profit organization for students in the field of bioinformatics and computational biology. Our goals are to promote events that enable networking between students and established researchers in the field, and to help train the next generation of computational biologists in Denmark.<br>The founding board of CBioVikings was established in early 2015 by ten PhD students with diverse backgrounds in computer science, computational biology, bioinformatics and biology from DTU and UCPH. In May 2015 CBioVikings was accepted as the official International Society for Computational Biology (ISCB) Regional Student Group (RSG) in Denmark.</p>
                     </div>
                 </div>
             </div>
@@ -109,38 +108,40 @@
                         <hr class="divider light my-4" />
                         <!--<p class="text-white-50 mb-4">CBioVikings</p> -->
                         <!--No upcoming events. Please <a class="page-scroll" style='color: #F75D45' href="#followus">follow us</a> to stay updated.-->
-                        <img src="assets/img/events/NCBTalks_SeqMotif.jpg" style="width: 100%; margin-top: 25px">
+                        <img src="assets/img/events/NCBTalks_SeqMotif.jpg" style="width: 80%; margin-bottom: 25px">
+                    </div>
+                    <div class="col-lg-8 text-center">
                         <a href="http://bit.ly/2OP2Pad" target="_blank" class="btn btn-light btn-md">Register now!</a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Socials-->
-        <section class="page-section bg-primary" id="follow-us">
+        <section class="page-section bg-primary text-white" id="follow-us">
             <div class="container">
                 <h2 class="text-center mt-0">Follow us!</h2>
-                <hr class="divider my-4" />
+                <hr class="divider light my-4" />
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <a href="https://twitter.com/CBioVikings"><i class="fas fa-4x fa-twitter text-white mb-4"></i></a>
+                            <a href="https://twitter.com/CBioVikings"> <i class="fab fa-4x fa-twitter text-white mb-4"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <a href="https://www.instagram.com/cbiovikings/"><i class="fas fa-4x fa-instagram text-white mb-4"></i></a>
+                            <a href="https://www.instagram.com/cbiovikings/"> <i class="fab fa-4x fa-instagram text-white mb-4"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="container text-center">
-                <a class="twitter-timeline" href="https://twitter.com/CBioVikings?ref_src=twsrc%5Etfw">Tweets by CBioVikings</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <a class="twitter-timeline" data-width="500" data-height="1000" data-dnt="true" data-theme="light" href="https://twitter.com/CBioVikings?ref_src=twsrc%5Etfw">Tweets by CBioVikings</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </section>
         <section id="committee">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <div class="col-lg-6 col-lg-offset-2 text-center">
                         <h2 class="section-heading">Committee</h2>
                         <hr>
                     </div>
@@ -158,6 +159,8 @@
                         <h4>Dimitrii<br>Borisevich</h4>
                         <p>Treasurer</p>
                     </div>
+                </div><br>
+                <div class="row">
                     <div class="col-lg-2 text-center">
                         <h4>Leonor<br>Rib</h4>
                         <p>Core Member</p>
@@ -170,24 +173,6 @@
                         <h4>Marek<br>Prachař</h4>
                         <p>Core Member</p>
                     </div>
-                </div><br>
-                <div class="row">
-                    <div class="col-lg-2 col-lg-offset-2 text-center">
-                        <h4>Nazeefa<br>Fatima</h4>
-                        <p>Founder & Advisor</p>
-                    </div>
-                    <div class="col-lg-2 text-center">
-                        <h4>Roza<br>Berhanu Lemma</h4>
-                        <p>Co-founder & Core Member </p>
-                    </div>
-                    <div class="col-lg-2 text-center">
-                        <h4>Margret<br>Veltman</h4>
-                        <p>Co-founder</p>
-                    </div>
-                    <div class="col-lg-2 text-center">
-                        <h4>Marieke<br>Kuijjer</h4>
-                        <p>Advisor</p>
-                    </div>
                 </div>
             </div>
         </section>
@@ -198,10 +183,10 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="mt-0">Contact us</h2>
                         <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Looking to join, collaborate or advertise? Contact us and we will get back to you as soon as possible!</p>
+                        <p class="text-muted mb-5">Looking to join, collaborate with us, or reach out to young bioinformaticians across Denmark?<br>Contact us and we will get back to you as soon as possible!</p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row text-center">
                     <a href="mailto:info@cbiovikings.org><i class="fas fa-envelope fa-3x mb-3 text-white"></i></a>
                     <!-- Make sure to change the email address in the anchor text and the link target below and in the icon!-->
                     <a class="d-block" href="mailto:info@cbiovikings.org">info@cbiovikings.org</a>
@@ -210,8 +195,7 @@
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - CBioVikings
-                                                                            Theme <a href="https://startbootstrap.com/theme/creative"'Creative'</a> from <a href="https://startbootstrap.com/">Start Bootstrap</a></div></div>
+            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - CBioVikings<br>Theme <a href="https://startbootstrap.com/theme/creative">'Creative'</a> from <a href="https://startbootstrap.com/">Start Bootstrap</a></div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
