--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
             <div class="container">
                 <h2 class="text-center mt-0">Follow us!</h2>
                 <hr class="divider light my-4" />
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 text-center">
+                <div class="row text-center">
+                    <div class="col-lg-3 col-md-6">
                         <div class="mt-5">
                             <a href="https://twitter.com/CBioVikings"> <i class="fab fa-4x fa-twitter text-white mb-4"></i></a>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center">
+                    <div class="col-lg-3 col-md-6">
                         <div class="mt-5">
                             <a href="https://www.instagram.com/cbiovikings/"> <i class="fab fa-4x fa-instagram text-white mb-4"></i></a>
                         </div>
@@ -135,14 +135,14 @@
                 </div>
             </div>
             <div class="container text-center">
-                <a class="twitter-timeline" data-width="500" data-height="1000" data-dnt="true" data-theme="light" href="https://twitter.com/CBioVikings?ref_src=twsrc%5Etfw">Tweets by CBioVikings</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <a class="twitter-timeline" data-width="450" data-height="800" data-dnt="true" data-theme="light" href="https://twitter.com/CBioVikings?ref_src=twsrc%5Etfw">Tweets by CBioVikings</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </section>
-        <section id="committee">
-            <div class="container">
+        <section id="board">
+            <div class="container text-center">
                 <div class="row">
-                    <div class="col-lg-6 col-lg-offset-2 text-center">
-                        <h2 class="section-heading">Committee</h2>
+                    <div class="col-lg-6 col-lg-offset-2">
+                        <h2 class="section-heading">Board</h2>
                         <hr>
                     </div>
                 </div>
@@ -152,12 +152,12 @@
                         <p>President</p>
                     </div>
                     <div class="col-lg-2 text-center">
-                        <h4>Petar<br>Todorov</h4>
-                        <p>Vice-President & Secretary</p>
-                    </div>
-                    <div class="col-lg-2 text-center">
                         <h4>Dimitrii<br>Borisevich</h4>
                         <p>Treasurer</p>
+                    </div>
+                   <div class="col-lg-2 text-center">
+                        <h4>Petar<br>Todorov</h4>
+                        <p>Vice-president</p>
                     </div>
                 </div><br>
                 <div class="row">
@@ -180,14 +180,14 @@
         <section class="page-section bg-dark text-white" id="contact">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8 text-center">
+                    <div class="col-lg-9 text-center">
                         <h2 class="mt-0">Contact us</h2>
                         <hr class="divider my-4" />
                         <p class="text-muted mb-5">Looking to join, collaborate with us, or reach out to young bioinformaticians across Denmark?<br>Contact us and we will get back to you as soon as possible!</p>
                     </div>
                 </div>
-                <div class="row text-center">
-                    <a href="mailto:info@cbiovikings.org><i class="fas fa-envelope fa-3x mb-3 text-white"></i></a>
+                <div class="text-center justify-content-center">
+                    <a href="mailto:info@cbiovikings.org> <i class="fas fa-envelope fa-3x mb-3 text-white"></i></a>
                     <!-- Make sure to change the email address in the anchor text and the link target below and in the icon!-->
                     <a class="d-block" href="mailto:info@cbiovikings.org">info@cbiovikings.org</a>
                 </div>
@@ -195,7 +195,7 @@
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - CBioVikings<br>Theme <a href="https://startbootstrap.com/theme/creative">'Creative'</a> from <a href="https://startbootstrap.com/">Start Bootstrap</a></div></div>
+            <div class="container"><div class="small text-center text-muted">Copyright © 2021 - CBioVikings<br>Theme <a href="https://startbootstrap.com/theme/creative">'Creative'</a> from <a href="https://startbootstrap.com/">Start Bootstrap</a></div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
