--- a/index.html
+++ b/index.html
@@ -121,15 +121,17 @@
             <div class="container">
                 <h2 class="text-center mt-0">Follow us!</h2>
                 <hr class="divider light my-4" />
-                <div class="row text-center">
-                    <div class="col-lg-3 col-md-6">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <a href="https://twitter.com/CBioVikings"> <i class="fab fa-4x fa-twitter text-white mb-4"></i></a>
+                            <a href="https://twitter.com/CBioVikings">@CBioVikings</a>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <a href="https://www.instagram.com/cbiovikings/"> <i class="fab fa-4x fa-instagram text-white mb-4"></i></a>
+                            <a href="https://www.instagram.com/cbiovikings/">@CBioVikings</a>
                         </div>
                     </div>
                 </div>
@@ -138,7 +140,8 @@
                 <a class="twitter-timeline" data-width="450" data-height="800" data-dnt="true" data-theme="light" href="https://twitter.com/CBioVikings?ref_src=twsrc%5Etfw">Tweets by CBioVikings</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </section>
-        <section id="board">
+        <!-- Board -->
+        <section class="page-section" id="board">
             <div class="container text-center">
                 <div class="row">
                     <div class="col-lg-6 col-lg-offset-2">
@@ -187,7 +190,7 @@
                     </div>
                 </div>
                 <div class="text-center justify-content-center">
-                    <a href="mailto:info@cbiovikings.org> <i class="fas fa-envelope fa-3x mb-3 text-white"></i></a>
+                    <a href="mailto:info@cbiovikings.org"> <i class="fas fa-envelope fa-3x mb-3 text-white"></i></a>
                     <!-- Make sure to change the email address in the anchor text and the link target below and in the icon!-->
                     <a class="d-block" href="mailto:info@cbiovikings.org">info@cbiovikings.org</a>
                 </div>
