--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </section>
         <!-- Socials-->
         <section class="page-section bg-primary text-white" id="follow-us">
-            <div class="container">
+            <div class="container text-center">
                 <h2 class="text-center mt-0">Follow us!</h2>
                 <hr class="divider light my-4" />
                 <div class="row">
@@ -144,36 +144,36 @@
         <section class="page-section" id="board">
             <div class="container text-center">
                 <div class="row">
-                    <div class="col-lg-6 col-lg-offset-2">
+                    <div class="col-lg-6 col-lg-2">
                         <h2 class="section-heading">Board</h2>
                         <hr>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-2 text-center">
-                        <h4>Cas<br>Blaauw</h4>
+                        <h4>Cas Blaauw</h4>
                         <p>President</p>
                     </div>
                     <div class="col-lg-2 text-center">
-                        <h4>Dimitrii<br>Borisevich</h4>
+                        <h4>Dimitrii Borisevich</h4>
                         <p>Treasurer</p>
                     </div>
                    <div class="col-lg-2 text-center">
-                        <h4>Petar<br>Todorov</h4>
+                        <h4>Petar Todorov</h4>
                         <p>Vice-president</p>
                     </div>
                 </div><br>
                 <div class="row">
                     <div class="col-lg-2 text-center">
-                        <h4>Leonor<br>Rib</h4>
+                        <h4>Leonor Rib</h4>
                         <p>Core Member</p>
                     </div>
                     <div class="col-lg-2 text-center">
-                        <h4>Mikaela<br>Koutrouli</h4>
+                        <h4>Mikaela Koutrouli</h4>
                         <p>Core Member</p>
                     </div>
                     <div class="col-lg-2 text-center">
-                        <h4>Marek<br>Prachař</h4>
+                        <h4>Marek Prachař</h4>
                         <p>Core Member</p>
                     </div>
                 </div>
@@ -188,9 +188,7 @@
                         <hr class="divider my-4" />
                         <p class="text-muted mb-5">Looking to join, collaborate with us, or reach out to young bioinformaticians across Denmark?<br>Contact us and we will get back to you as soon as possible!</p>
                     </div>
-                </div>
-                <div class="text-center justify-content-center">
-                    <a href="mailto:info@cbiovikings.org"> <i class="fas fa-envelope fa-3x mb-3 text-white"></i></a>
+                    <a href="mailto:info@cbiovikings.org"> <i class="fas fa-envelope fa-4x mb-3 text-white"></i></a>
                     <!-- Make sure to change the email address in the anchor text and the link target below and in the icon!-->
                     <a class="d-block" href="mailto:info@cbiovikings.org">info@cbiovikings.org</a>
                 </div>
