--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </section>
         <!-- Socials-->
         <section class="page-section bg-primary text-white" id="follow-us">
-            <div class="container text-center">
+            <div class="container align-content-center">
                 <h2 class="text-center mt-0">Follow us!</h2>
                 <hr class="divider light my-4" />
                 <div class="row">
@@ -142,7 +142,7 @@
         </section>
         <!-- Board -->
         <section class="page-section" id="board">
-            <div class="container text-center">
+            <div class="container align-content-center">
                 <div class="row">
                     <div class="col-lg-6 col-lg-2">
                         <h2 class="section-heading">Board</h2>
@@ -188,6 +188,8 @@
                         <hr class="divider my-4" />
                         <p class="text-muted mb-5">Looking to join, collaborate with us, or reach out to young bioinformaticians across Denmark?<br>Contact us and we will get back to you as soon as possible!</p>
                     </div>
+                </div>
+                <div class="text-center justify-content-center">
                     <a href="mailto:info@cbiovikings.org"> <i class="fas fa-envelope fa-4x mb-3 text-white"></i></a>
                     <!-- Make sure to change the email address in the anchor text and the link target below and in the icon!-->
                     <a class="d-block" href="mailto:info@cbiovikings.org">info@cbiovikings.org</a>
