small fixes and alignment changes v8

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <a href="https://www.instagram.com/cbiovikings/"> <i class="fab fa-4x fa-instagram text-white mb-4"></i></a>
-                            <a href="https://www.instagram.com/cbiovikings/"> <p class="text-white-50 mb-4"> @CBioVikings</p></a>
+                            <a href="https://www.instagram.com/cbiovikings/"> <p class="text-white-50 mb-4"> @cbiovikings</p></a>
                         </div>
                     </div>
                 </div>
@@ -143,9 +143,11 @@
         <!-- Board -->
         <section class="page-section" id="board">
             <div class="container justify-content-center">
-                <div class="col-lg-6 col-lg-2 text-center">
-                    <h2 class="section-heading">Board</h2>
-                    <hr>
+                <div class="row text-center">
+                    <div class="col-lg-6 col-lg-2 text-center">
+                        <h2 class="section-heading">Board</h2>
+                        <hr>
+                    </div>
                 </div>
                 <div class="row text-center">
                     <div class="col-lg-2 text-center">
@@ -178,7 +180,7 @@
             </div>
         </section>
         <!-- Contact-->
-        <section class="page-section bg-dark text-white" id="contact">
+        <section class="page-section bg-dark text-white" id="contact-us">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-9 text-center">
