alignment test v10 for real this time

--- a/index.html
+++ b/index.html
@@ -143,13 +143,13 @@
         <!-- Board -->
         <section class="page-section" id="board">
             <div class="container">
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col-lg-6 text-center">
                         <h2 class="section-heading">Board</h2>
                         <hr>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col-lg-2 text-center">
                         <h4>Cas Blaauw</h4>
                         <p>President</p>
@@ -162,8 +162,8 @@
                         <h4>Petar Todorov</h4>
                         <p>Vice-president</p>
                     </div>
-                </div><br>
-                <div class="row text-center">
+                </div>
+                <div class="row justify-content-center">
                     <div class="col-lg-2 text-center">
                         <h4>Leonor Rib</h4>
                         <p>Core Member</p>
