First try at adding extra button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">Bringing together young bioinformaticians across Denmark</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find out more</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#next-event">Next event</a>
                     </div>
                 </div>
             </div>
@@ -55,7 +56,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Who are we?</h2>
+                        <h2 class="text-white mt-0">Who we are</h2>
                         <hr class="divider light my-4" />
                         <p class="text-white-50 mb-4">CBioVikings, short for Computational Biology Vikings, is a non-profit organization for students in the field of bioinformatics and computational biology. Our goals are to promote events that enable networking between students and established researchers in the field, and to help train the next generation of computational biologists in Denmark.<br>The founding board of CBioVikings was established in early 2015 by ten PhD students with diverse backgrounds in computer science, computational biology, bioinformatics and biology from DTU and UCPH. In May 2015 CBioVikings was accepted as the official International Society for Computational Biology (ISCB) Regional Student Group (RSG) in Denmark.</p>
                     </div>
