Change button alignment

--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">Bringing together young bioinformaticians across Denmark</p>
+                    </div>
+                    <div class="col-lg-offset-3 text-center">
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find out more</a>
+                    </div>
+                    <div class="col-lg-offset-3 text-center">
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#next-event">Next event</a>
                     </div>
                 </div>
