Update board text style

--- a/index.html
+++ b/index.html
@@ -149,35 +149,35 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6 text-center">
                         <h2 class="section-heading">Board</h2>
-                        <hr>
+                        <hr class="light">
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-3 text-center">
-                        <h4 class="text-white-80">Cas Blaauw</h4>
-                        <p class="text-white-80">President</p>
+                        <h4 class="text-white-75">Cas Blaauw</h4>
+                        <p class="text-white-75">President</p>
                     </div>
                     <div class="col-lg-3 text-center">
-                        <h4 class="text-white-80">Dimitrii Borisevich</h4>
-                        <p class="text-white-80">Treasurer</p>
+                        <h4 class="text-white-75">Dimitrii Borisevich</h4>
+                        <p class="text-white-75">Treasurer</p>
                     </div>
                    <div class="col-lg-3 text-center">
-                        <h4 class="text-white-80">Petar Todorov</h4>
-                        <p class="text-white-80">Vice-President</p>
+                        <h4 class="text-white-75">Petar Todorov</h4>
+                        <p class="text-white-75">Vice-President</p>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-3 text-center">
-                        <h4 class="text-white-80">Leonor Rib</h4>
-                        <p class="text-white-80">Core Member</p>
+                        <h4 class="text-white-75">Leonor Rib</h4>
+                        <p class="text-white-75">Core Member</p>
                     </div>
                     <div class="col-lg-3 text-center">
-                        <h4 class="text-white-80">Mikaela Koutrouli</h4>
-                        <p class="text-white-80">Core Member</p>
+                        <h4 class="text-white-75">Mikaela Koutrouli</h4>
+                        <p class="text-white-75">Core Member</p>
                     </div>
                     <div class="col-lg-3 text-center">
-                        <h4 class="text-white-80">Marek Prachař</h4>
-                        <p class="text-white-80">Core Member</p>
+                        <h4 class="text-white-75">Marek Prachař</h4>
+                        <p class="text-white-75">Core Member</p>
                     </div>
                 </div>
             </div>
