Revert board names transparency

--- a/index.html
+++ b/index.html
@@ -154,30 +154,30 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-3 text-center">
-                        <h4 class="text-white-75">Cas Blaauw</h4>
-                        <p class="text-white-75">President</p>
+                        <h4>Cas Blaauw</h4>
+                        <p>President</p>
                     </div>
                     <div class="col-lg-3 text-center">
-                        <h4 class="text-white-75">Dimitrii Borisevich</h4>
-                        <p class="text-white-75">Treasurer</p>
+                        <h4>Dimitrii Borisevich</h4>
+                        <p>Treasurer</p>
                     </div>
                    <div class="col-lg-3 text-center">
-                        <h4 class="text-white-75">Petar Todorov</h4>
-                        <p class="text-white-75">Vice-President</p>
+                        <h4>Petar Todorov</h4>
+                        <p>Vice-President</p>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-3 text-center">
-                        <h4 class="text-white-75">Leonor Rib</h4>
-                        <p class="text-white-75">Core Member</p>
+                        <h4>Leonor Rib</h4>
+                        <p>Core Member</p>
                     </div>
                     <div class="col-lg-3 text-center">
-                        <h4 class="text-white-75">Mikaela Koutrouli</h4>
-                        <p class="text-white-75">Core Member</p>
+                        <h4>Mikaela Koutrouli</h4>
+                        <p>Core Member</p>
                     </div>
                     <div class="col-lg-3 text-center">
-                        <h4 class="text-white-75">Marek Prachař</h4>
-                        <p class="text-white-75">Core Member</p>
+                        <h4>Marek Prachař</h4>
+                        <p>Core Member</p>
                     </div>
                 </div>
             </div>
