Socials icons/text back to white

--- a/index.html
+++ b/index.html
@@ -121,20 +121,20 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <a href="https://twitter.com/CBioVikings"> <i class="fab fa-4x fa-twitter text-primary mb-4"></i></a>
-                            <a href="https://twitter.com/CBioVikings"> <p class="text-white-50 mb-4"> @CBioVikings</p></a>
+                            <a href="https://twitter.com/CBioVikings"> <i class="fab fa-4x fa-twitter text-white mb-4"></i></a>
+                            <a href="https://twitter.com/CBioVikings"> <p class="text-white-75 mb-4"> @CBioVikings</p></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <a href="https://www.instagram.com/cbiovikings/"> <i class="fab fa-4x fa-instagram text-primary mb-4"></i></a>
-                            <a href="https://www.instagram.com/cbiovikings/"> <p class="text-white-50 mb-4"> @cbiovikings</p></a>
+                            <a href="https://www.instagram.com/cbiovikings/"> <i class="fab fa-4x fa-instagram text-white mb-4"></i></a>
+                            <a href="https://www.instagram.com/cbiovikings/"> <p class="text-white-75 mb-4"> @cbiovikings</p></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <a href="https://www.facebook.com/CBIOVikingsDK/"> <i class="fab fa-4x fa-facebook text-primary mb-4"></i></a>
-                            <a href="https://www.facebook.com/CBIOVikingsDK/"> <p class="text-white-50 mb-4"> CBioVikings</p></a>
+                            <a href="https://www.facebook.com/CBIOVikingsDK/"> <i class="fab fa-4x fa-facebook text-white mb-4"></i></a>
+                            <a href="https://www.facebook.com/CBIOVikingsDK/"> <p class="text-white-75 mb-4"> CBioVikings</p></a>
                         </div>
                     </div>
                 </div>
