--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
                     </div>
                 </div>
                 <div class="text-center justify-content-center">
-                    <a href="mailto:info@cbiovikings.org"> <i class="fas fa-envelope fa-4x mb-3 text-white"></i></a>
+                    <a href="mailto:contact@cbiovikings.org"> <i class="fas fa-envelope fa-4x mb-3 text-white"></i></a>
                     <!-- Make sure to change the email address in the anchor text and the link target below and in the icon!-->
-                    <a class="d-block" href="mailto:info@cbiovikings.org">info@cbiovikings.org</a>
+                    <a class="d-block" href="mailto:contact@cbiovikings.org">contact@cbiovikings.org</a>
                 </div>
             </div>
         </section>
