Update event to hackathon

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
                         <hr class="divider my-4" />
                         <!--<p class="text-white-50 mb-4">CBioVikings</p>CBioVikings</p> -->
                         <!--No upcoming events. Please <a class="page-scroll" style='color: #F75D45' href="#followus">follow us</a> to stay updated.-->
-                        <img src="assets/img/events/NordicCompBio_BioLib.png" style="width: 80%; margin-bottom: 25px">
+                        <img src="assets/img/events/prot_hackathon.jfif" style="width: 80%; margin-bottom: 25px">
                     </div>
-                    <div class="col-lg-8 text-center">
-                        <a href="https://www.airmeet.com/e/813710b0-827b-11eb-bd09-470731bf14b4" target="_blank" class="btn btn-primary btn-md">Register now!</a>
-                    </div>
+<!--                     <div class="col-lg-8 text-center"> -->
+<!--                         <a href="https://www.airmeet.com/e/813710b0-827b-11eb-bd09-470731bf14b4" target="_blank" class="btn btn-primary btn-md">Register now!</a> -->
+<!--                     </div> -->
                 </div>
             </div>
         </section>
