--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                         <!--No upcoming events. Please <a class="page-scroll" style='color: #F75D45' href="#followus">follow us</a> to stay updated.-->
                         <img src="assets/img/events/hackathon_prot.jfif" style="width: 80%; margin-bottom: 25px">
                     </div>
-<!--                     <div class="col-lg-8 text-center"> -->
-<!--                         <a href="https://www.airmeet.com/e/813710b0-827b-11eb-bd09-470731bf14b4" target="_blank" class="btn btn-primary btn-md">Register now!</a> -->
-<!--                     </div> -->
+                    <div class="col-lg-8 text-center">
+                        <a href="http://biohackathon.dk" target="_blank" class="btn btn-primary btn-md">Register now!</a>
+                    </div>
                 </div>
             </div>
         </section>
