Improve syntax of redirect page html

--- a/joinus.html
+++ b/joinus.html
@@ -1,1 +1,13 @@
-<meta http-equiv="Refresh" content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSfG-a6WcqBh7QEFD5BtbVWAGgxe7FS1rzlo5FoFBrr7LbIPfQ/viewform?usp=sf_link'" />
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta http-equiv="Refresh"
+        content="0; url='https://docs.google.com/forms/d/e/1FAIpQLSfG-a6WcqBh7QEFD5BtbVWAGgxe7FS1rzlo5FoFBrr7LbIPfQ/viewform?usp=sf_link'" />
+</head>
+
+<body>
+    <p>Please follow <a href="https://docs.google.com/forms/d/e/1FAIpQLSfG-a6WcqBh7QEFD5BtbVWAGgxe7FS1rzlo5FoFBrr7LbIPfQ/viewform?usp=sf_link">this link</a>.</p>
+</body>
+
+</html>
