Add new links to GA event

--- a/index.html
+++ b/index.html
@@ -107,12 +107,13 @@
                         <!--No upcoming events. Please <a class="page-scroll" style='color: #F75D45' href="#followus">follow us</a> to stay updated.-->
                         <!-- <img src="assets/img/events/hackathon_prot.jfif" style="width: 80%; margin-bottom: 25px"> -->
                         <h3>CBioVikings general assembly</h3>
-                        <h4>Wednesday 8 December</h4>
+                        <h4>Wednesday 15 December, 19:00</h4>
                         <p>Interested in joining CBioVikings, got an idea to pitch or just want to learn more about us?
-                        Join our GA! Open to all.</p>
+                        Join our GA! Open to all, no need to register.</p>
                     </div>
                     <div class="col-lg-8 text-center">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfG-a6WcqBh7QEFD5BtbVWAGgxe7FS1rzlo5FoFBrr7LbIPfQ/viewform?usp=sf_link" target="_blank" class="btn btn-primary btn-md">Register your interest here</a>
+                        <a href="https://fb.me/e/20xueLQts" target="_blank" class="btn btn-primary btn-md">Facebook event</a>
+                        <a href="https://ucph-ku.zoom.us/j/63006512280" target="_blank" class="btn btn-primary btn-md">Zoom meeting</a>
                     </div>
                 </div>
             </div>
