Add new board and replace next event

--- a/index.html
+++ b/index.html
@@ -104,16 +104,11 @@
                         <h2 class="mt-0">Next event</h2>
                         <hr class="divider my-4" />
                         <!--<p class="text-white-50 mb-4">CBioVikings</p>CBioVikings</p> -->
-                        <!--No upcoming events. Please <a class="page-scroll" style='color: #F75D45' href="#followus">follow us</a> to stay updated.-->
+                        No upcoming events at the moment. Please <a class="page-scroll" style='color: #F75D45' href="#followus">follow us</a> to stay updated.
                         <!-- <img src="assets/img/events/hackathon_prot.jfif" style="width: 80%; margin-bottom: 25px"> -->
-                        <h3>CBioVikings general assembly</h3>
-                        <h4>Wednesday 15 December, 19:00</h4>
-                        <p>Interested in joining CBioVikings, got an idea to pitch or just want to learn more about us?
-                        Join our GA! Open to all, no need to register.</p>
                     </div>
                     <div class="col-lg-8 text-center">
-                        <a href="https://fb.me/e/20xueLQts" target="_blank" class="btn btn-primary btn-md">Facebook event</a>
-                        <a href="https://ucph-ku.zoom.us/j/63006512280" target="_blank" class="btn btn-primary btn-md">Zoom meeting</a>
+                        <!-- <a href="https://fb.me/e/20xueLQts" target="_blank" class="btn btn-primary btn-md">Facebook event</a> -->
                     </div>
                 </div>
             </div>
@@ -159,29 +154,47 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-3 text-center">
-                        <h4>Cas Blaauw</h4>
+                        <h4>Giannos Louloudis</h4>
                         <p>President</p>
                     </div>
                     <div class="col-lg-3 text-center">
-                        <h4>Dimitrii Borisevich</h4>
+                        <h4>Cas Blaauw</h4>
                         <p>Treasurer</p>
                     </div>
                    <div class="col-lg-3 text-center">
-                        <h4>Petar Todorov</h4>
+                        <h4>Marek Prachař</h4>
                         <p>Vice-President</p>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-3 text-center">
-                        <h4>Leonor Rib</h4>
+                        <h4>Dimitrii Borisevich</h4>
+                        <p>Core Member</p>
+                    </div>
+                    <div class="col-lg-3 text-center">
+                        <h4>Petar Todorov</h4>
                         <p>Core Member</p>
                     </div>
                     <div class="col-lg-3 text-center">
                         <h4>Mikaela Koutrouli</h4>
                         <p>Core Member</p>
                     </div>
-                    <div class="col-lg-3 text-center">
-                        <h4>Marek Prachař</h4>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-2 text-center px-2"> <!---px-2 added to manually reduce padding, allowing for names on one line-->
+                        <h4>Leonor Rib</h4>
+                        <p>Core Member</p>
+                    </div>
+                    <div class="col-lg-2 text-center px-2">
+                        <h4>Zsofia Magyar</h4>
+                        <p>Core Member</p>
+                    </div>
+                    <div class="col-lg-2 text-center px-2">
+                        <h4>Naba Al-Sari</h4>
+                        <p>Core Member</p>
+                    </div>
+                    <div class="col-lg-2 text-center px-2">
+                        <h4>Jonathan Funk</h4>
                         <p>Core Member</p>
                     </div>
                 </div>
